--- a/PyTorchPractice2.ipynb
+++ b/PyTorchPractice2.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "PyTorchPractice2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvHROLfE/WyanbA8nmWRmu",
+      "mount_file_id": "1yDLDyb52mf5gE5uRz5F2U-NPsGRUSjlq",
+      "authorship_tag": "ABX9TyO5idDmPK4rk9mehJ7SOHZP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,16 +27,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z-bcLqbe1gn1"
+      },
+      "source": [
+        "Intro to the torch tensor"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TobcNcQ6ok8J",
-        "outputId": "dfb98c86-1698-4798-bb36-e2c42b4b4212"
+        "outputId": "13ce8ac7-ca34-4e34-ee53-c835eea243cb"
       },
       "source": [
         "import torch\n",
+        "#run terminal commands\n",
+        "!nvidia-smi\n",
         "x = torch.empty(1)\n",
         "z = torch.zeros(2,3)\n",
         "print(x)\n",
@@ -54,21 +66,88 @@
         "y = y.view([1,10])\n",
         "print(y.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "tensor([1.0112e-35])\n",
+            "Thu Nov 19 04:51:16 2020       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 455.38       Driver Version: 418.67       CUDA Version: 10.1     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   43C    P8    10W /  70W |      0MiB / 15079MiB |      0%      Default |\n",
+            "|                               |                      |                 ERR! |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n",
+            "tensor([1.0110e-35])\n",
             "tensor([[0., 0., 0.],\n",
             "        [0., 0., 0.]])\n",
             "tensor([25.,  9.])\n",
             "tensor([[0., 0., 0., 0., 0.],\n",
             "        [0., 0., 0., 0., 0.]])\n",
             "torch.Size([2, 5])\n",
-            "tensor([[0.5629, 0.3775, 0.9956, 0.3239, 0.7829],\n",
-            "        [0.9785, 0.7673, 0.3446, 0.5217, 0.3014]])\n",
+            "tensor([[0.8070, 0.8625, 0.0975, 0.3056, 0.2779],\n",
+            "        [0.3508, 0.6478, 0.2103, 0.4261, 0.5726]])\n",
             "torch.Size([1, 10])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JEqr9f3q1bBg"
+      },
+      "source": [
+        "Data "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ww87BeZO3B56",
+        "outputId": "8ca3e0c4-8068-4734-d660-8f93da477f46"
+      },
+      "source": [
+        "import torch\n",
+        "import torchvision\n",
+        "from torchvision import transforms, datasets\n",
+        "\n",
+        "#get datasets using torchvision.datasets \n",
+        "train = torchvision.datasets.MNIST(\"\", train=True, download=True,transform=transforms.Compose([transforms.ToTensor()]))\n",
+        "test = torchvision.datasets.MNIST(\"\", train=False, download=True,transform=transforms.Compose([transforms.ToTensor()]))\n",
+        "\n",
+        "print(test)\n"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dataset MNIST\n",
+            "    Number of datapoints: 10000\n",
+            "    Root location: \n",
+            "    Split: Test\n",
+            "    StandardTransform\n",
+            "Transform: Compose(\n",
+            "               ToTensor()\n",
+            "           )\n"
           ],
           "name": "stdout"
         }
